--- a/src/App.css
+++ b/src/App.css
@@ -122,16 +122,19 @@ a {
   height: 350px;
 }
 .info {
-  position: relative;
+  position: absolute;
   left: 2rem;
+  top: 7rem;
   width: 40%;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-  font-size: calc(8px + 2vmin);
-  color: purple;
-  padding: 1.5rem;
+  font-size: 1.2rem;
+  color: rgb(10, 10, 10);
+  padding: 1rem;
   text-align: justify;
+  line-height: 2rem;
 }
+
 .flex {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -195,6 +198,24 @@ a {
   padding: 2rem;
   font-size: 1.1rem;
 }
+.learn {
+  position: relative;
+  border-style: solid;
+  border-radius: 15px;
+  border-color: purple;
+  border-width: 2px;
+  justify-content: space-around;
+  height: 15rem;
+  text-overflow: clip;
+  text-align: center;
+  margin: 2rem;
+  padding: 1.5rem;
+  font-size: 1.2rem;
+}
+.learn p {
+  position: absolute;
+  top: 3rem;
+}
 .aboutSlide .each-slide-effect {
   height: 15rem;
 }
@@ -216,12 +237,13 @@ a {
   font-size: 1.1rem;
 }
 .capital {
+  position: relative;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 1rem;
   padding: 2rem;
   margin-top: 2rem;
-  max-height: 100vh;
+  line-height: 2rem;
 }
 .cap1,
 .cap4 {
